Spacing fixes for the sponsor element.

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,8 @@ main {
   flex-direction: column;
   align-items: center;
   gap: var(--spacing-500);
+
+  width: 100%;
 }
 
 .hero__title {
@@ -54,6 +56,24 @@ main {
 .hero__details {
   color: var(--blue-300);
   text-align: center;
+}
+
+.sponsors {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+
+  width: 100%;
+  height: fit-content;
+}
+
+.sponsors img {
+  object-fit: contain;
+  height: 100%;
+  width: auto;
+  min-width: 0;
 }
 
 .register {
